@@ -1,3 +1,9 @@
+2008-07-21  Petr Ovtchenkov  <ptr@island.corbina.net>
+
+	* type_traits.h: fix STLport version; use type_traits
+	from STLport (it was derived from this type_traits.h and has
+	fresh modifications).
+
 2008-06-30  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* opts.h: free allocated objects;
